--- a/css/general/style.css
+++ b/css/general/style.css
@@ -65,7 +65,11 @@ nav ul li a:hover{
     background-clip: text;
     color: transparent;
 }
-
+.fa-bars-staggered{
+    display: none;
+    font-size: 25px;
+    cursor: pointer;
+}
 
 
 
@@ -163,10 +167,25 @@ nav ul li a:hover{
     header {
         padding: 1em 2em !important;
     }
-
+    .hero-section {
+        margin: 4em 0 0 0 !important;
+    }
+    .fa-bars-staggered{
+        display: block;
+    }
+    nav{
+        display: '';
+    }
     nav ul {
         flex-direction: column;
         gap: 1em;
+        position: fixed;
+        left: 60%;
+        right: 5%;
+        top: 10%;
+        background: #fff;
+        padding: 1em;
+        border-radius: 1em;
     }
 
     .hero-section {
