--- a/css/general/style.css
+++ b/css/general/style.css
@@ -191,7 +191,7 @@ nav ul li a:hover{
     }
     .hero-section {
         align-items: center !important;
-        justify-content: center !important;
+        justify-content: flex-end !important;
         margin: 6em 1em 1em 1em;
         padding: 1em;
     }
@@ -248,6 +248,8 @@ nav ul li a:hover{
 /* Adjustments for Very Small Mobile Devices */
 @media (max-width: 480px) {
     .hero-section{
+        align-items: center !important;
+        justify-content: flex-end !important;
         padding: 2em !important;
     }
     .hero-section .left h1{
@@ -259,6 +261,9 @@ nav ul li a:hover{
 
     .hero-section .left p{
         width: 100% !important;
+    }
+    .hero-section .right{
+
     }
     .about {
         margin: 2em 0.5em 1em 0.5em;
