webkit blue color removed

--- a/css/general/style.css
+++ b/css/general/style.css
@@ -21,6 +21,7 @@
     --scHs: 35px;
 }
 body{
+    -webkit-tap-highlight-color: transparent;
     background: var(--backgroundColor);
     color: var(--text);
     font-size: 17px;
