--- a/css/general/style.css
+++ b/css/general/style.css
@@ -34,7 +34,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 1.5em 12em;
+    padding: 0 12em;
     position: fixed;
     top: 0;
     left: 0;
@@ -42,9 +42,10 @@ header{
     background: var(--darkBackground);
     color: var(--whiteText);
     z-index: 1000;
-} 
-header .logo i{
-    font-size: 200%;
+}
+header .logo img{
+    width: 5em;
+    height: 5em;
 }
 nav ul{
     display: flex;
@@ -167,7 +168,7 @@ nav ul li a:hover{
 /* Adjustments for Mobile Devices */
 @media (max-width: 768px) {
     header {
-        padding: 1em 2em !important;
+        padding: 0 2em !important;
     }
     .hero-section {
         margin: 4em 0 0 0 !important;
@@ -193,7 +194,7 @@ nav ul li a:hover{
     .hero-section {
         align-items: center !important;
         justify-content: flex-end !important;
-        margin: 6em 1em 1em 1em;
+        margin: 6em 0 1em 0;
         padding: 1em;
     }
 
@@ -251,7 +252,7 @@ nav ul li a:hover{
     .hero-section{
         align-items: center;
         justify-content: flex-end;
-        padding: 2em 2em 0 2em !important;
+        padding: 3em 2em 0 2em !important;
     }
     .hero-section .left h1{
         font-size: var(--scHs) !important;
