--- a/css/index.css
+++ b/css/index.css
@@ -33,7 +33,7 @@
     background: var(--primaryColor);
     border-radius: 5em;
     text-decoration: none;
-    color: var(--whiteText);
+    color: var(--darkBackground);
     margin-bottom: 4em;
 }
 .hero-section .right img{
@@ -76,7 +76,7 @@
     transition: 0.5s ease;
 }
 .card h2{
-    color: var(--primaryColor);
+    color: #003366;
 }
 .card:hover{
     background: var(--hoveredCardBackground);
