--- a/css/index.css
+++ b/css/index.css
@@ -190,7 +190,9 @@
     display: none;
     z-index: 1; /* Ensure it appears above the pseudo-element */
 }
-
+.event-info-show a{
+    color: var(--primaryColor);
+}
 
 
 
