--- a/css/general/style.css
+++ b/css/general/style.css
@@ -44,6 +44,10 @@ header{
     color: var(--whiteText);
     z-index: 1000;
 }
+header .logo{
+    display: flex;
+    align-items: center;
+}
 header .logo img{
     width: 5em;
     height: 5em;
@@ -250,6 +254,9 @@ nav ul li a:hover{
 
 /* Adjustments for Very Small Mobile Devices */
 @media (max-width: 480px) {
+    header {
+        padding: 0 1em !important;
+    }
     .hero-section{
         align-items: center;
         justify-content: flex-end;
